--- a/proto/speed19937/Makefile
+++ b/proto/speed19937/Makefile
@@ -172,6 +172,9 @@ sfmtX782_fastc_inline2: sfmtX782_fastc_inline.c test_time2_inline.c
 sfmtP37_fastc_inline2: sfmtP37_fastc_inline.c test_time2_inline.c
 	${CC} -o $@ sfmtP37_fastc_inline.c
 
+sfmtP372_fastc_inline2: sfmtP372_fastc_inline.c test_time2_inline.c
+	${CC} -o $@ sfmtP372_fastc_inline.c
+
 sfmtX78_fastc_funcall2: sfmtX78_fastc_funcall.o test_time2_funcall.o
 	${CC} -o $@ sfmtX78_fastc_funcall.o test_time2_funcall.o
 
