--- a/proto/speed19937/Makefile.intel
+++ b/proto/speed19937/Makefile.intel
@@ -2,7 +2,7 @@
 
 #CC = gcc -Wall -O9 -faltivec -Wmissing-prototypes -arch ppc  $(DDEBUG) $(DMEXP) $(DPG)
 #CC = icl /Wcheck /fast 
-CC = icl /Wcheck /O3 /QxB /Qc99 /Qprefetch /Fa
+CC = icl /Wcheck /O3 /QxB /Qc99 /Qprefetch /Qip /Qipo /Fa
 #CC = icl /Wcheck /O1 /debug /Qc99
 #CPP = g++ -Wall -fast $(DDEBUG) $(DMEXP) $(DPG)
 
