sfmtD01_alti.c OK
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@245 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/speed/Makefile
+++ b/dSFMT/speed/Makefile
@@ -1,5 +1,5 @@
 #for GNU make
-DDEBUG = -O0 -g
+#DDEBUG = -O0 -g -DDEBUG
 
 CC = gcc -Wall -O9 -faltivec -Wmissing-prototypes -Winline -maltivec -arch ppc  -DNDEBUG $(DDEBUG) $(DMEXP) $(DPG)
 #CC = gcc -Wall -O9 -faltivec -Wmissing-prototypes -arch ppc  -fprefetch-loop-arrays $(DDEBUG) $(DMEXP) $(DPG)
@@ -10,11 +10,11 @@ LINKOPT = -lntl -lgmp
 inline_all:sfmt4a_fastc_inline pmt_fastc_inline mt_fastc_inline
 
 ##### ALTIVEC ####
-sfmtD01_alti_inline2: test_time2_inline.c sfmtP37_alti_inline.c
-	${CC} -o $@ sfmtP37_alti_inline.c
+sfmtD01_alti: sfmtD01_alti.c test_time.c  paramsD01.h
+	${CC} -o $@ sfmtD01_alti.c
 
 #### NORMAL C ####
-sfmtD01_fastc: sfmtD01_fastc.c test_time.c
+sfmtD01_fastc: sfmtD01_fastc.c test_time.c paramsD01.h
 	${CC} -o $@ sfmtD01_fastc.c
 
 .c.o:
