alti sse2 source OK
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@255 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/proto/speed19937/Makefile
+++ b/proto/speed19937/Makefile
@@ -114,6 +114,9 @@ sfmtX78_alti_funcall2: test_time2_funcall.o sfmtX78_alti_funcall.o
 sfmtP37_alti_inline2: test_time2_inline.c sfmtP37_alti_inline.c
 	${CC} -o $@ sfmtP37_alti_inline.c
 
+sfmtP3e_alti_inline2: test_time2_inline.c sfmtP3e_alti_inline.c
+	${CC} -o $@ sfmtP3e_alti_inline.c
+
 sfmt4a_alti44497_inline: test_time_inline.c sfmt4a_alti44497_inline.h
 	${CC} -DRANDOM=sfmt4a_alti44497_inline.h -o $@ test_time_inline.c
 
@@ -177,6 +180,9 @@ sfmtP37_fastc_inline2: sfmtP37_fastc_inline.c test_time2_inline.c
 
 sfmtP372_fastc_inline2: sfmtP372_fastc_inline.c test_time2_inline.c
 	${CC} -o $@ sfmtP372_fastc_inline.c
+
+sfmtP3e_fastc_inline2: sfmtP3e_fastc_inline.c test_time2_inline.c
+	${CC} -o $@ sfmtP3e_fastc_inline.c
 
 sfmtX78_fastc_funcall2: sfmtX78_fastc_funcall.o test_time2_funcall.o
 	${CC} -o $@ sfmtX78_fastc_funcall.o test_time2_funcall.o
